2017-05-20  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.12.11
        * inst/NEWS.Rd: Release 0.12.11
        * inst/bib/Rcpp.bib: Release 0.12.11
        * inst/include/Rcpp/config.h: Release 0.12.11

        * README.md: Updated counts for dependents and tests

        * debian/*: Changes for Debian release of 0.12.10

2017-05-19  Dirk Eddelbuettel  <edd@debian.org>

        * inst/NEWS.Rd: Removed one duplicate entry
        * inst/include/Rcpp/api/meat/Rcpp_eval.h (Rcpp): Minor whitespace changes

2017-05-18  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll Date and Version once more
        * inst/NEWS.Rd: Updated

        * R/Attributes.R (.plugins[["openmp"]]): Fix typo in comment

        * src/attributes.cpp (Rcpp): Use size_t (twice) to suppress nags from g++

2017-05-16  JJ Allaire  <jj@rstudio.com>

        * R/Attributes.R: Automatically generate native routine registrations.
        * src/attributes.cpp: Automatically generate native routine registrations.
        * R/Rcpp.package.skeleton.R: Don't generate native routines when creating
        a package using attributes.

2017-05-09  Dirk Eddelbuettel  <edd@debian.org>

        * R/Rcpp.package.skeleton.R (Rcpp.package.skeleton): Under R 3.4.0, run
        tools::package_native_routine_registration_skeleton to create src/init.c

2017-05-07  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version again

        * inst/include/Rcpp/module/Module_Property.h: Remove two typed exception
        specifications which upset g++ 7.1 or higher

2017-05-05  Kirill Müller <krlmlr@mailbox.org>

        * inst/include/Rcpp/date_datetime/Date.h: Suppress -Wconversion warnings
        * inst/include/Rcpp/date_datetime/Datetime.h: Idem
        * inst/include/Rcpp/date_datetime/newDateVector.h: Idem
        * inst/include/Rcpp/date_datetime/newDatetimeVector.h: Idem